# oxidoc

./: .travis.yml  Cargo.toml  README.md
src/: ast_ty_wrappers.rs  convert.rs  document.rs  driver.rs  errors.rs  generator.rs  io_support.rs  lib.rs  main.rs  markup.rs  paths.rs  store.rs  toml_util.rs  visitor.rs
src/conversion/: doc_containers.rs  mod.rs  wrappers.rs
src/convert/: doc_containers.rs  markup.rs  mod.rs  storable.rs  wrappers.rs
src/generation/: ast_ty_wrappers.rs  mod.rs  visitor.rs
src/markdown_renderer/: ansi_renderer.rs  dombox.rs  mod.rs
src/search/: mod.rs  search.rs  sorted_result_set.rs
src/tui/: matcher.rs  mod.rs  score.rs  search.rs
tests/: tests.rs  util.rs
tests/conversion/: mod.rs  test_paths.rs
tests/search/: mod.rs  test_lookup.rs
tests/store/: test_store.rs
