[package]
name = "oxidoc"
version = "0.1.2"
authors = ["Ruin0x11 <ipickering2@gmail.com>"]

[dependencies]
syntex_syntax = "0.58.1"
serde = "0.9.9"
serde_derive = "0.9.9"
bincode = "0.7.0"
toml = "0.3"
clap = "2.25"
error-chain = "0.10.0"
log = "0.3"
env_logger = "0.3"
pager = { version = "0.10.0", git = "https://gitlab.com/Ruin0x11/pager-rs/", branch = "specify_pager_executable" }
regex = "0.2"
cursive = { git = "https://github.com/gyscos/Cursive" }
lazy_static = "0.2.8"
ansi_term = "0.9"
strsim = "0.6.0"
pulldown-cmark = "0.0"
term_size = "0.3"
syntect = "1.7"
unicode-segmentation = "1.1"
unicode-width = "0.1"
html2runes = { git = "https://github.com/Ruin0x11/html2runes" }

[lib]
name = "oxidoc"
path = "src/lib.rs"

[[bin]]
name = "oxidoc"
path = "src/main.rs"

[[test]]
name = "tests"