[package]
name = "oxidoc"
version = "0.1.2"
authors = ["Ruin0x11 <ipickering2@gmail.com>"]

[dependencies]
syntex_syntax = "0.58.1"
serde = "0.9.9"
serde_derive = "0.9.9"
bincode = "0.7.0"
toml = "0.3"
clap = "2.25"
error-chain = "0.10.0"
log = "0.3"
env_logger = "0.3"
regex = "0.2"
lazy_static = "0.2.8"
ansi_term = "0.9"
strsim = "0.6.0"
term_size = "0.3"
catmark = { git = "https://github.com/Ruin0x11/catmark", branch = "support_html_rendering" }

[dependencies.cursive]
version = "0.6.0"
default-features = false
features = ["pancurses-backend"]

[target.'cfg(unix)'.dependencies]
pager = "0.11"

[dependencies.cursive]
version = "0.6.0"
default-features = false
features = ["pancurses-backend"]

[target.'cfg(unix)'.dependencies]
pager = { version = "0.10.0", git = "https://gitlab.com/Ruin0x11/pager-rs/" }

[lib]
name = "oxidoc"
path = "src/lib.rs"

[[bin]]
name = "oxidoc"
path = "src/main.rs"
doc = false

[[test]]
name = "tests"
